2007-06-25  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c:
	Adjusted for the API changes in theme-thumbnail.c. Thumbnail requestes are
	now directly queued by generate_*_async(), so do not maintain an own queue
	anymore.

	* appearance-style.c:
	Use the new asynchronous thumbnail generation functions, and replace all
	occurrences of "metacity_themes_list" with the correct "window_themes_list".

	* appearance.h:
	Remove "theme_queue", it is not needed anymore.

2007-06-24  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-themes.c: (theme_selection_changed_cb),
	(theme_save_cb), (themes_init), (themes_shutdown):
	* appearance.glade:
	* appearance.h:
	* theme-save.c:
	* theme-save.h:
	* theme-util.h: implement theme saving

2007-06-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: rearranged functions (no code changes)

2007-06-23  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (theme_delete): use STOCK_DELETE instead of STOCK_OK in
	the confirmation dialog

2007-06-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (add_to_treeview), (remove_from_treeview),
	(update_in_treeview), (changed_on_disk_cb), (style_init):
	* appearance-themes.c: (theme_select_name),
	(theme_set_custom_from_theme), (theme_changed_on_disk_cb),
	(theme_thumbnail_done_cb):
	* theme-installer.c: (gnome_theme_installer_run):
	* theme-util.c: (theme_find_in_model):
	* theme-util.h: listen to on-disk theme changes in the details tabs, too

2007-06-22  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (gtk_theme_changed), (window_theme_changed),
	(icon_theme_changed), (generic_theme_delete),
	(gtk_theme_delete_cb), (window_theme_delete_cb),
	(icon_theme_delete_cb), (style_init), (prepare_list),
	(check_color_schemes_enabled): hook up the delete buttons

2007-06-22  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade:
	Tweak the metatheme icon view's margin and spacings to better fit to the
	new thumbnails.
