@@ -1,3 +1,8 @@
+2007-06-25  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: (prepare_list): don't try to use uninitialized
+	GdkPixbuf
+
 2007-06-25  Denis Washington  <denisw@svn.gnome.org>
 
 	* appearance-themes.c:
